# gemini-headless

./: .gitignore  bootstrap_profile.py  collect_cli.py  config.yaml  pyproject.toml
.profiles/mathieu/: Last Browser  Local State  Module Info Cache
.profiles/mathieu/Default/: Favicons  History  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Visited Links  Web Data
.profiles/mathieu/Default/DawnCache/: data_1  index
.profiles/mathieu/Default/Extension Scripts/: LOG
.profiles/mathieu/Default/Extension State/: LOG  LOG.old
.profiles/mathieu/Default/GPUCache/: data_1  index
.profiles/mathieu/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  TransportSecurity
.profiles/mathieu/Default/Session Storage/: LOG  LOG.old
.profiles/mathieu/Default/Sessions/: Session_13399498682599534  (+2 more)
.profiles/mathieu/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  index
.profiles/mathieu/ShaderCache/: data_1  index
gemini_headless/: __init__.py
gemini_headless/collect/: __init__.py  orchestrator.py
gemini_headless/collect/filters/: cleaner.py
gemini_headless/collect/producers/: __init__.py  be.py  dom.py  sse.py  ws.py
gemini_headless/collect/utils/: __init__.py  logs.py  stealth_injector.py
gemini_headless/connectors/: __init__.py  cdp_manager.py  cdp_multiattach.py  gemini_connector.py  input_and_session.py
gemini_headless/utils/: consent_detector.py  fingerprint.py  sandbox_profile.py  session_guardian.py  stealth_injector.py
(+84 files in other folders)
